# VTC

./: .gitignore  README.md  pyproject.toml
dataloader/: README.md  __init__.py  build.py  config.py  prepare.py  types.py
dataloader/adapters/: __init__.py  esc.py
dataloader/batch/: __init__.py  base.py  data_batch.py  speech.py
dataloader/dataset/: __init__.py  base.py  webdataset.py
dataloader/loader/: __init__.py  base.py  metadata.py  waveform.py
dataloader/manifest/: __init__.py  joiner.py  schema.py  store.py
dataloader/processor/: __init__.py  base.py  registry.py
dataloader/transform/: __init__.py  audio.py  base.py  label.py
docs/: DATALOADER_DESIGN.md  FEATURE_EXTRACTION_SUMMARY.md  PROGRESS.md
figures/seedlings_10/: per_file_grid.csv  threshold_grid.csv  volume_sensitivity.csv
scripts/: README.md  compare.py  compare.slurm  infer.py  infer.slurm  make_manifest.py  normalize.py  pipeline.sh  plots.py  preflight.py  retest.py  retest.slurm  run.sh  utils.py  vad.py  vad.slurm  vtc.py  vtc.slurm
scripts/core/: __init__.py  checkpoint.py  metadata.py  parallel.py  regions.py  thresholds.py  vad_processing.py
scripts/vad/: pyannote.py  run.slurm
slurm/: compare.slurm  comparison.sh  esc.slurm  package_test.sh  pipeline.sh  repackage_test.sh  segment_snr.slurm  snr_diagnostic.slurm  test.slurm  threshold_comparison.slurm  vad.slurm  vtc.slurm  vtc_clips.slurm
src/: utils.py
src/analysis/: chunk_artifact.py  long_turns.py  noise_stats.py  plot_vad_coverage.py  snr_vad_diagnostic.py  threshold_comparison.py  vad_coverage_analysis.py  vtc_clip_alignment.py  vtc_on_clips.py
src/core/: __init__.py  conversations.py  intervals.py  metadata.py  parallel.py  regions.py  thresholds.py  vad_processing.py
src/packaging/: clips.py  listener.py  loaders.py  packer.py  stats.py  writer.py
src/pipeline/: compare.py  esc.py  noise.py  normalize.py  package.py  preflight.py  resources.py  segment_snr.py  snr.py  vad.py  vtc.py
src/plotting/: README.md  figures.py  master.py  snr_noise.py  snr_vtc.py  speech_turns.py
tests/: README.md  conftest.py  test_checkpoint.py  test_clips.py  test_create_dataloader.py  test_esc.py  test_intervals.py  test_metadata.py  test_parallel.py  test_regions.py  test_stitched_audio.py  test_vad_processing.py
